fixed some layout issues

--- a/src/main/js/style.css
+++ b/src/main/js/style.css
@@ -14,7 +14,7 @@
 }
 
 .left-green {
-    border-left: 3px solid #61BD4F;
+    border-left: 4px solid #61BD4F;
 }
 
 .left-orange {
@@ -22,7 +22,7 @@
 }
 
 .left-red {
-    border-left: 3px solid #e74c3c;
+    border-left: 4px solid #e74c3c;
 }
 
 .left-purple {
